# CPhysics

./: CMakeLists.txt  README.md  main.c
include/graphics/: index_buffer.h  shader_program.h  vertex_array.h  vertex_buffer.h
include/graphics/base/: shader_program.h  vertex_array.h  vertex_attrib_array.h  vertex_buffer.h
include/graphics/display/: mesh.h  model.h
include/util/: io.h  linked_list.h  log.h  strings.h  types.h
res/: base.fs  base.vs
res/shaders/: base.vs
src/graphics/: index_buffer.c  shader_program.c  vertex_array.c  vertex_attrib_array.c  vertex_buffer.c
src/graphics/base/: index_buffer.c  shader_program.c  vertex_array.c  vertex_attrib_array.c  vertex_buffer.c
src/graphics/display/: mesh.c  model.c
src/util/: io.c  linked_list.c  log.c  strings.c
